[package]
name = "rs-keepass-diff"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64      = "0.13.0"
flate2      = "1.0.22"
rust-crypto = "0.2.36"
serde       = { version = "1.0.130", features = ["derive"] }
quick-xml   = { version = "0.22.0", features = ["serialize"] }
